# fridgyeast

./: Cargo.toml  LICENSE  LICENSE~  README.md  build.rs  deploy.sh  fridgyeast.service  notes.txt
src/: actzero_pubsub.rs  config.rs  defconfig.toml  fridge.rs  main.rs  params.rs  rusqlmem.rs  sensor.rs  timeseries.rs  types.rs  web.rs
templates/: main.css  main.html  numinput.html  observer.js  register.html  set.css  set2.html  set2.js  yesnoinput.html
