[package]
name = "fridgyeast"
version = "0.1.0"
authors = ["Matt Johnston <matt@ucc.asn.au>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
atomicwrites = "0.3"
log = "0.4"
simplelog = "0.11"

futures = "0.3"
signal-hook = "0.3"
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
async-io = "1.1"

chrono = "0.4"
base64 = "0.13"

act-zero = { version = "0.4", features = ["async-std"] }

# outdated, new version changes API
config = { version = "0.11", features = ["toml"], default-features = false }

sysfs_gpio = "0.6"

# tide must match version used in tide-rustls, so have strict versions here
# don't want default logging feature
tide = { version = "0.16", default-features = false, features = ["h1-server", "sessions"] }
tide-rustls = "0.3.0"
tide-compress = { version = "0.9", default-features = false, features = ["deflate"] }
tide-acme = "0.1"
askama_tide = "0.14"

askama = { version = "0.11", features = ["serde-json", "with-tide"] }

rusqlite = { version = "0.26", features = ["backup", "bundled"] }

plotters = { version = "0.3", default-features = false, features = ["svg_backend", "datetime", "line_series", "point_series"] }
plotters-svg = "0.3"

[profile.release]
opt-level = 'z'
lto = "thin"
debug = 0

[profile.dev]
debug = 0

